layout bugs

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -858,6 +858,15 @@ video {
 .mb-80{
   margin-bottom: 20rem;
 }
+.mt-20{
+  margin-top: 5rem;
+}
+.mt-16{
+  margin-top: 4rem;
+}
+.mr-0{
+  margin-right: 0px;
+}
 .block{
   display: block;
 }
@@ -1173,6 +1182,18 @@ video {
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 .pt-14{
   padding-top: 3.5rem;
@@ -6588,6 +6609,10 @@ readers do not read off random characters that represent icons */
     margin-left: auto;
     margin-right: auto;
   }
+  .md\:my-8{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
   .md\:mb-28{
     margin-bottom: 7rem;
   }
@@ -6596,6 +6621,15 @@ readers do not read off random characters that represent icons */
   }
   .md\:mb-0{
     margin-bottom: 0px;
+  }
+  .md\:mt-24{
+    margin-top: 6rem;
+  }
+  .md\:mr-10{
+    margin-right: 2.5rem;
+  }
+  .md\:mr-8{
+    margin-right: 2rem;
   }
   .md\:block{
     display: block;
@@ -6632,6 +6666,9 @@ readers do not read off random characters that represent icons */
   }
   .md\:flex-row{
     flex-direction: row;
+  }
+  .md\:flex-nowrap{
+    flex-wrap: nowrap;
   }
   .md\:items-start{
     align-items: flex-start;
